@@ -1,3 +1,7 @@
+2013-05-25  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #48524: Missing file Classes/Domain/Model/LanguageExtensible.php
+
 2013-05-23  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fix extended domain model classes loading after class loader cache is cleared
